--- a/index.html
+++ b/index.html
@@ -345,7 +345,40 @@ Con amplia experiencia en la defensa contra la deportación, nos tomamos el tiem
 </div>
 </section>
 <!---languages end here-->
+<!--contact us start here-->
+<section class="contract_usd">
 
+<div class="container">
+<div class="row">
+<div class="col-md-6 m-auto">
+<div class="contractv">
+<span></span>
+<h1>contact us</h1>
+</div>
+</div>
+</div>
+
+
+<div class="row">
+<div class="col-md-6 m-auto">
+<form action="">
+<input type="text" placeholder="First Name" autocomplete="off">
+<input type="email" placeholder="Email" autocomplete="off">
+<textarea name="" placeholder="Messege" id="" cols="30" rows="10" autocomplete="off"></textarea>
+<input type="submit" value="send">
+</form>
+
+</div>
+</div>
+
+
+
+
+</div>
+
+</section>
+
+<!--contact us end here-->
 <!-- footer -->
 
 <section class="footer">
